service-ux-chatbox/ux-chatbox01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-difyab-uxc
  namespace: difyab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: difyab-uxc
  template:
    metadata:
      labels:
        app: difyab-uxc
    spec:
      containers:
        - name: difyab-uxc
          image: __AZURE_CR_URL__/v2/dify-poc/difyab-uxc:latest
          resources:
            requests:
              cpu: '250m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '256Mi'
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-cip-difyab-uxc
  namespace: difyab
spec:
  selector:
    app: difyab-uxc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
  # sessionAffinity: ClientIP
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 600
