service-ux-chatbox/deployment-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: difyaiab-fe-stripprefix
  namespace: difyaiab
spec:
  stripPrefix:
    prefixes:
      - '/fe'
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: difyaiab-fe
  namespace: difyaiab

spec:
  entryPoints:
    - websecure

  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      #middlewares:
      #  - name: difyaiab-fe-stripprefix
      #    namespace: difyaiab
      services:
        - name: service-cip-difyaiab-fe
          port: 80
          namespace: difyaiab
