service-ux-chatbox/ux-chatbox02-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-difyab-uxc-ipallowlist
  namespace: difyab
spec:
  ipAllowList:
    sourceRange:
      - 128.85.200.44/32
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-difyab-uxc
  namespace: difyab
spec:
  entryPoints:
    - web

  routes:
    - match: Host(`agentbuilder.__DIFYAI_URL_DOMAIN__.com`)
      kind: Rule
      middlewares:
        - name: middleware-difyab-uxc-ipallowlist
          namespace: difyab
      services:
        - name: service-cip-difyab-uxc
          port: 80
          namespace: difyab
